# algotrading-service

./: .gitignore  Dockerfile  README.md  SLIDE.md  STORY.md  TCO.md  docker-compose.yml  pom.xml
agent/: README.md  api.py  config.py  errors.py  main.py  prompts.py  pyproject.toml  scheduler.py  trading_agent.py
docs/: ARCHITECTURE.md  CONTROLLER_ENDPOINTS_AND_STRATEGIES.md  PRD.md  PROJECT_CONTEXT.md  TA4J_STRATEGY_IMPLEMENTATION.md
service/: README.md  pom.xml
service/src/main/java/com/algotrading/app/: App.java
service/src/main/resources/: application.yml
src/main/java/com/algotrading/app/auth/: KiteAuthConfig.java  KiteAuthException.java  KiteSessionStore.java
src/main/java/com/algotrading/app/config/: KiteProperties.java
src/main/java/com/algotrading/app/controller/: InstrumentController.java  KiteAuthController.java  OrderController.java  StrategyController.java
src/main/java/com/algotrading/app/exception/: MarketDataException.java
src/main/java/com/algotrading/app/market/: InstrumentPort.java  KiteInstrumentAdapter.java  MarketDataPort.java
src/main/java/com/algotrading/app/model/: Candle.java  HistoricalDataRequest.java  InstrumentResponse.java  StrategyDecision.java  TradingSignal.java
src/main/java/com/algotrading/app/order/: ExitOrderRequest.java  KiteOrderAdapter.java  OrderPort.java  OrderRequest.java  OrderService.java  OrderStatusResponse.java  PlacedOrderResponse.java
src/main/java/com/algotrading/app/redis/: RedisConfig.java
src/main/java/com/algotrading/app/service/: InstrumentService.java  TradingStrategyService.java
(+59 files in other folders)
